--- a/app/styles/_forms.scss
+++ b/app/styles/_forms.scss
@@ -26,13 +26,21 @@ textarea {
   line-height: 14px;
   border: 1px solid #FFF;
   display: inline-block;
-  padding: 10px 16px 10px 20px;
+  padding: 10px 20px;
   text-align: center;
   border-radius: 2px;
+  transition: all 0.1s linear;
+  filter: blur(0px);
   &--black {
     border-color: lighten($dark-blue,60%);
     color: lighten($dark-blue,10%);
     background: #FFF;
+    &:hover {
+      border-color: transparent;
+      background: $black;
+      color: #FFF;
+    }
   }
+
 }
 
