--- a/app/styles/_typo.scss
+++ b/app/styles/_typo.scss
@@ -11,6 +11,7 @@ h1,h2,h3 {
   -webkit-font-smoothing: antialiased;
   font-family: 'Roboto Slab', sans-serif;
   font-weight: 500;
+  line-height: 1.2;
   span {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
@@ -21,14 +22,20 @@ h1,h2,h3 {
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 3rem;
   margin-top: 0;
   font-weight: 700;
   &.huge {
-    font-size: 6rem;
+    font-size: 4.5rem;
     font-weight: 500;
     span {
       margin-top: 15px;
+    }
+  }
+  @media (min-width: 768px){
+    font-size: 4rem;
+    &.huge {
+      font-size: 6rem;
     }
   }
 }
