--- a/app/styles/_typo.scss
+++ b/app/styles/_typo.scss
@@ -94,3 +94,17 @@ address {
   margin: 0;
   padding: 0;
 }
+
+.tags {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  li {
+    display: inline-block;
+    background: lighten($grey-blue,39%);
+    padding: 4px 8px;
+    margin: 4px 3px;
+    border-radius: 2px;
+    font-size: 1.4rem;
+  }
+}
