--- a/app/styles/_headers.scss
+++ b/app/styles/_headers.scss
@@ -49,7 +49,7 @@
 }
 
 .header--workshop {
-  background-image: url(../images/background-2.jpg);
+  background-image: url(../images/background-2-bw.jpg);
   background-position: center;
   background-size: cover;
   height: 84vh;
