--- a/app/styles/_project-details.scss
+++ b/app/styles/_project-details.scss
@@ -8,7 +8,7 @@
   z-index: 10000;
   visibility: hidden;
   backface-visibility: hidden;
-  transform: scale(0.6);
+  transform: scale(0.8);
   opacity: 0;
   transition: all 0.4s;
   &.is-open {
@@ -58,10 +58,22 @@
       height: 100%;
       display: table;
       vertical-align: middle;
-      padding: 20px 60px;
+      padding: 20px 40px 20px 60px;
       .center {
         display: table-cell;
         vertical-align: middle;
+      }
+      h1 {
+        font-size: 3.3rem;
+        //word-break: break-all;
+      }
+      h2 {
+        font-size: 16px;
+        font-weight: 700;
+        margin-bottom: 5px;
+        + p {
+          margin-top: 0px;
+        }
       }
     }
     &__overlay {
@@ -92,9 +104,13 @@
     width: 60%;
     height: 60%;
   }
-  &--small {
+  &--small,
+  &--small-half{
     width: 40%;
     height: 30%;
+  }
+  &--small-half {
+    width: 20%;
   }
   &--header {
     float: none;
