--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -28,9 +28,6 @@ img {
   max-width: 100%;
 }
 
-body {
-  background: url(../images/grunge.jpg) no-repeat center top;
-}
 
 .circle {
   border-radius: 50%;
@@ -152,7 +149,7 @@ body {
       }
     }
   }
-  dl {
+  dl,.label {
     padding: 0 20px;
   }
 }
@@ -161,6 +158,7 @@ body {
   @extend %clearfix;
   max-width: 980px;
   margin: 40px auto;
+  text-align: center;
   header, footer {
     @extend %article-header;
   }
